<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NextVoo</string>

    <string name="please_restart_device_or_app">请尝试重启应用或重启设备(Err: %d)</string>
    <string name="start_prview">开始预览</string>
    <string name="stop_preview">停止预览</string>
    <string name="previewsize_1">4208x3120</string>
    <string name="previewsize_2">2104x1560</string>
    <string name="previewsize_3">1920x1080</string>
    <string name="previewsize_4">1280x720</string>
    <string name="previewsize_min">最小预览尺寸</string>
    <string name="previewsize_max">最大预览尺寸</string>
    <string name="fps_1">15x15</string>
    <string name="fps_2">20x20</string>
    <string name="fps_3">24x24</string>
    <string name="fps_4">30x30</string>
    <string name="restart_preview">设置预览尺寸或者FPS时重启预览:<xliff:g id="result">%s</xliff:g></string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="set_preview_size">Set preview size</string>
    <string name="set_picture_size">Set picture size</string>
    <string name="set_fps_size">Set preview fps</string>
    <string name="fps_min_hint">30</string>
    <string name="fps_max_hint">30</string>
    <string name="preview_width_hint">1920</string>
    <string name="preview_height_hint">1080</string>
    <string name="hide_setting">隐藏设置面板</string>
    <string name="show_setting">显示设置面板</string>
    <string name="take_photo">拍照</string>
</resources>
