<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/textureview_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!--<com.zzh.camerapreview.MyTextureView
            android:id="@+id/sfv1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"/>

        <TextureView
            android:id="@+id/sfv2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextureView
            android:id="@+id/sfv3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_prview"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop_preview"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_previewsize1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_previewsize2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_previewsize3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_previewsize4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_4"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_previewsize_min"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_min"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_previewsize_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previewsize_max"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_fps1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fps_1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_fps2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fps_2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_fps3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fps_3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_fps4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fps_4"
                android:textAllCaps="false" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_restartPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart_preview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_preview_width"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/preview_width_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@android:color/holo_red_light"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="X"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_preview_height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/preview_height_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@android:color/holo_red_light"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_preview_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_preview_size"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_fps_min"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fps_min_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/green"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="X"
                android:textColor="@color/green"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_fps_max"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/fps_max_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/green"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_fps_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_fps_size"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_picturesize_width"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/preview_width_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="X"
                android:textColor="@color/yellow"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txt_picturesize_height"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/preview_height_hint"
                android:inputType="numberDecimal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textColor="@color/yellow"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_picturesize_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_picture_size"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_top_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_showhide_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/hide_setting"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark"/>

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/take_photo"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp" />
    </LinearLayout>

<!--    for test  @{-->
    <View
        android:id="@+id/frame_view_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:visibility="gone"/>

    <com.zzh.camerapreview.ResizableImageView
        android:id="@+id/img_preview_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
<!--    @}-->

</RelativeLayout>